// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea basic type renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-radius: 8px;
  border: solid 1px transparent;
  caret-color: #757575;
  color: #384248;
  font-family: Nunito Sans;
  background-color: #E4E8EA;
  resize: none;
  font-size: 14px;
  height: 170px;
  width: 390px;
  padding-top: 11px;
  padding-bottom: 11px;
  padding-left: 64px;
  padding-right: 64px;
}

.c1::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 14px;
  color: #49565D;
}

.c1::-moz-placeholder {
  font-weight: 400;
  font-size: 14px;
  color: #49565D;
}

.c1:-ms-input-placeholder {
  font-weight: 400;
  font-size: 14px;
  color: #49565D;
}

.c1::placeholder {
  font-weight: 400;
  font-size: 14px;
  color: #49565D;
}

.c1:disabled {
  color: #999999;
  background-color: #EBEBEB;
  cursor: not-allowed;
}

.c1:focus {
  outline: none;
  border: 1px solid #6F838D;
  box-shadow: none;
}

.c1:active {
  outline: none;
}

.c1:hover::-webkit-input-placeholder {
  color: #272E33;
}

.c1:hover::-moz-placeholder {
  color: #272E33;
}

.c1:hover:-ms-input-placeholder {
  color: #272E33;
}

.c1:hover::placeholder {
  color: #272E33;
}

<div
  className="c0"
  display="inline-block"
>
  <textarea
    className="c1"
    disabled={false}
    type="text"
  />
</div>
`;

exports[`Textarea styled type renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: 45px;
  margin-top: 30px;
  display: inline-block;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  font-family: sans-serif;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-radius: 8px;
  border: solid 1px transparent;
  caret-color: #757575;
  color: #384248;
  font-family: Nunito Sans;
  background-color: #E4E8EA;
  resize: none;
  font-size: 14px;
  height: 170px;
  width: 390px;
  padding-top: 11px;
  padding-bottom: 11px;
  padding-left: 64px;
  padding-right: 64px;
  color: success;
  height: 400px;
  width: 200px;
  line-height: 3;
  font-weight: bold;
  border-color: success;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 14px;
  color: #49565D;
}

.c3::-moz-placeholder {
  font-weight: 400;
  font-size: 14px;
  color: #49565D;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
  font-size: 14px;
  color: #49565D;
}

.c3::placeholder {
  font-weight: 400;
  font-size: 14px;
  color: #49565D;
}

.c3:disabled {
  color: #999999;
  background-color: #EBEBEB;
  cursor: not-allowed;
}

.c3:focus {
  outline: none;
  border: 1px solid #6F838D;
  box-shadow: none;
}

.c3:active {
  outline: none;
}

.c3:hover::-webkit-input-placeholder {
  color: #272E33;
}

.c3:hover::-moz-placeholder {
  color: #272E33;
}

.c3:hover:-ms-input-placeholder {
  color: #272E33;
}

.c3:hover::placeholder {
  color: #272E33;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
  margin-left: 5px;
  color: #384248;
  font-weight: 400;
  font-size: 12px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0"
  display="inline-block"
>
  <label
    className="c1 c2"
  >
    Este es el label del textarea:
  </label>
  <textarea
    className="c3"
    color="success"
    disabled={false}
    fontWeight="bold"
    height="400px"
    placeholder="Hello World!"
    type="text"
    width="200px"
  />
  <p
    className="c4"
    color="#384248"
    fontSize="12px"
    fontWeight="400"
  >
    *Este es el detalle del textarea
  </p>
</div>
`;
